generalized shop, leaderboard, account and guide menus (with default-menu.css)

--- a/templates/partials/account.html
+++ b/templates/partials/account.html
@@ -1,10 +1,10 @@
-    <div id="account" class="account" hidden>
-        <div class="account__panel">
-            <div class="account__sticky-top">
-                <div class="account__top-bar">
+    <div id="account" class="account default-menu" hidden>
+        <div class="account__panel default-menu__panel">
+            <div class="account__sticky-top default-menu__sticky-top">
+                <div class="account__top-bar default-menu__top-bar">
                     <button
                         id="account-back"
-                        class="account__back-button"
+                        class="account__back-button default-menu__back-button"
                         type="button"
                         aria-labelledby="account-back-label"
                     >
@@ -22,16 +22,16 @@
                         </svg>
                         <span
                             id="account-back-label"
-                            class="account__assistive-text"
+                            class="account__assistive-text default-menu__assistive-text"
                             data-i18n-key="button.back"
                         >
                             Back
                         </span>
                     </button>
-                    <div class="account__top-title" data-i18n-key="account.title">My Account</div>
+                    <div class="account__top-title default-menu__top-title" data-i18n-key="account.title">My Account</div>
                     <button
                         id="account-edit"
-                        class="account__edit-button"
+                        class="account__edit-button default-menu__back-button"
                         type="button"
                         aria-label="Edit account"
                     >
@@ -44,57 +44,59 @@
                     </button>
                 </div>
             </div>
-            <div class="account__content">
-                <div class="account__field">
-                    <label class="account__field-label" for="account-name" data-i18n-key="account.field.name">Name</label>
-                    <div class="account__name-row">
-                        <input
-                            id="account-name"
-                            class="account__name-input"
-                            type="text"
-                            maxlength="128"
-                            aria-describedby="account-feedback"
-                            autocomplete="name"
-                            inputmode="text"
-                            spellcheck="false"
-                        />
+            <div class="account__scroll default-menu__scroll">
+                <div class="account__content">
+                    <div class="account__field">
+                        <label class="account__field-label" for="account-name" data-i18n-key="account.field.name">Name</label>
+                        <div class="account__name-row">
+                            <input
+                                id="account-name"
+                                class="account__name-input"
+                                type="text"
+                                maxlength="128"
+                                aria-describedby="account-feedback"
+                                autocomplete="name"
+                                inputmode="text"
+                                spellcheck="false"
+                            />
+                            <button
+                                id="account-save-name"
+                                class="account__save-button"
+                                type="button"
+                                data-i18n-key="account.name.saveButton"
+                            >
+                                Save name
+                            </button>
+                        </div>
+                        <p id="account-feedback" class="account__feedback" aria-live="polite"></p>
+                    </div>
+                    <p id="account-status" class="account__status"></p>
+                    <div class="account__actions">
                         <button
-                            id="account-save-name"
-                            class="account__save-button"
+                            id="delete-progress"
+                            class="options-modal__action options-modal__action--danger"
                             type="button"
-                            data-i18n-key="account.name.saveButton"
+                            data-i18n-key="options.deleteProgress"
                         >
-                            Save name
+                            Delete game progress
+                        </button>
+                        <button
+                            id="delete-account"
+                            class="options-modal__action options-modal__action--danger"
+                            type="button"
+                            data-i18n-key="account.deleteAccount"
+                        >
+                            Delete account
+                        </button>
+                        <button
+                            id="logout-button"
+                            class="options-modal__action options-modal__action--secondary"
+                            type="button"
+                            data-i18n-key="account.logoutGoogle"
+                        >
+                            Logout from Google
                         </button>
                     </div>
-                    <p id="account-feedback" class="account__feedback" aria-live="polite"></p>
-                </div>
-                <p id="account-status" class="account__status"></p>
-                <div class="account__actions">
-                    <button
-                        id="delete-progress"
-                        class="options-modal__action options-modal__action--danger"
-                        type="button"
-                        data-i18n-key="options.deleteProgress"
-                    >
-                        Delete game progress
-                    </button>
-                    <button
-                        id="delete-account"
-                        class="options-modal__action options-modal__action--danger"
-                        type="button"
-                        data-i18n-key="account.deleteAccount"
-                    >
-                        Delete account
-                    </button>
-                    <button
-                        id="logout-button"
-                        class="options-modal__action options-modal__action--secondary"
-                        type="button"
-                        data-i18n-key="account.logoutGoogle"
-                    >
-                        Logout from Google
-                    </button>
                 </div>
             </div>
         </div>
