--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -16,6 +16,7 @@
     <link rel="preload" as="image" href="/assets/images/main-menu-bg-landscape.webp"> <!--media="(min-width: 781px)"-->
 
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/default-menu.css" />
     <link rel="stylesheet" href="css/match-app.css" />
     <link rel="stylesheet" href="css/options-toggle.css" />
     <link rel="stylesheet" href="css/main-menu.css" />
