--- a/templates/partials/shop.html
+++ b/templates/partials/shop.html
@@ -1,11 +1,11 @@
-    <div id="shop" class="shop" hidden>
-        <div class="shop__card">
-            <div class="shop__scroll">
-                <div class="shop__sticky-top">
-                    <div class="shop__top-bar">
+    <div id="shop" class="shop default-menu" hidden>
+        <div class="shop__card default-menu__panel">
+            <div class="shop__scroll default-menu__scroll">
+                <div class="shop__sticky-top default-menu__sticky-top">
+                    <div class="shop__top-bar default-menu__top-bar">
                         <button
                             id="shop-close"
-                            class="shop__back-button shop__back-button--top"
+                            class="shop__back-button shop__back-button--top default-menu__back-button"
                             type="button"
                             aria-labelledby="shop-back-label"
                         >
@@ -21,16 +21,16 @@
                             >
                                 <path d="M15 7l-6 5.5L15 18" />
                             </svg>
-                            <span
-                                id="shop-back-label"
-                                class="shop__assistive-text"
-                                data-i18n-key="button.back"
-                            >
+                        <span
+                            id="shop-back-label"
+                            class="shop__assistive-text default-menu__assistive-text"
+                            data-i18n-key="button.back"
+                        >
                                 Back
                             </span>
                         </button>
-                        <div class="shop__top-title" data-i18n-key="shop.title">Sugar Shop</div>
-                        <div class="shop__top-spacer" aria-hidden="true"></div>
+                        <div class="shop__top-title default-menu__top-title" data-i18n-key="shop.title">Sugar Shop</div>
+                        <div class="shop__top-spacer default-menu__top-spacer" aria-hidden="true"></div>
                     </div>
                     <div class="shop__coins-row">
                         <img src="assets/images/sugar_coin_icon.webp" alt="" class="shop__coins-icon" aria-hidden="true" />
