--- a/templates/partials/tutorial.html
+++ b/templates/partials/tutorial.html
@@ -1,11 +1,11 @@
-    <div id="tutorial" class="tutorial" hidden>
-        <div class="tutorial__panel">
-            <div class="tutorial__scroll">
-                <div class="tutorial__sticky-top">
-                    <div class="tutorial__top-bar">
+    <div id="tutorial" class="tutorial default-menu" hidden>
+        <div class="tutorial__panel default-menu__panel">
+            <div class="tutorial__scroll default-menu__scroll">
+                <div class="tutorial__sticky-top default-menu__sticky-top">
+                    <div class="tutorial__top-bar default-menu__top-bar">
                         <button
                             id="tutorial-back"
-                            class="tutorial__back-button"
+                            class="tutorial__back-button default-menu__back-button"
                             type="button"
                             aria-labelledby="tutorial-back-label"
                         >
@@ -21,16 +21,16 @@
                             >
                                 <path d="M15 7l-6 5.5L15 18" />
                             </svg>
-                            <span
-                                id="tutorial-back-label"
-                                class="tutorial__assistive-text"
-                                data-i18n-key="button.back"
-                            >
+                        <span
+                            id="tutorial-back-label"
+                            class="tutorial__assistive-text default-menu__assistive-text"
+                            data-i18n-key="button.back"
+                        >
                                 Back
                             </span>
                         </button>
-                        <div class="tutorial__top-title" data-i18n-key="tutorial.title">Candy Guide</div>
-                        <div class="tutorial__top-spacer" aria-hidden="true"></div>
+                        <div class="tutorial__top-title default-menu__top-title" data-i18n-key="tutorial.title">Candy Guide</div>
+                        <div class="tutorial__top-spacer default-menu__top-spacer" aria-hidden="true"></div>
                     </div>
                 </div>
                 <div class="tutorial__content">
