--- a/css/default-menu.css
+++ b/css/default-menu.css
@@ -28,6 +28,7 @@
         inset 0 1px 0 rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(18px);
     box-sizing: border-box;
+    padding-bottom: 1.25rem;
 }
 
 .default-menu__scroll {
@@ -36,6 +37,7 @@
     flex-direction: column;
     gap: 1rem;
     overflow-y: auto;
+    padding-bottom: 1.25rem;
 }
 
 .default-menu__scroll::-webkit-scrollbar {
