update lvl selection

--- a/templates/partials/level-select.html
+++ b/templates/partials/level-select.html
@@ -40,6 +40,7 @@
                 <aside class="level-select__details" aria-live="polite">
                     <div class="level-select__details-card">
                         <div id="level-select-selected-label" class="level-select__selected-label">Level 1</div>
+                        <div id="level-select-selected-story" class="level-select__selected-story"></div>
                         <div id="level-select-meta" class="level-select__meta"></div>
                         <div class="level-select__goals-title" data-i18n-key="levelSelect.goalsTitle">Goals</div>
                         <ul id="level-select-goals" class="level-select__goals" role="list"></ul>
