--- a/css/level-select.css
+++ b/css/level-select.css
@@ -291,7 +291,31 @@
 }
 
 .level-select__meta-chip--moves {
-    background: rgba(255, 255, 255, 0.05);
+    position: relative;
+    padding-left: 3rem;
+    background: radial-gradient(circle at 20% 20%, rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.02));
+    border-color: rgba(255, 255, 255, 0.25);
+    color: #fff;
+}
+
+.level-select__meta-chip--moves::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0.5rem;
+    width: 1.3rem;
+    height: 1.3rem;
+    border-radius: 0.9rem;
+    background: rgba(255, 255, 255, 0.08);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
+    background-image: url('../assets/images/moves.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+    transform: translateY(-50%);
 }
 
 .level-select__meta-chip--difficulty {
