--- a/css/shop.css
+++ b/css/shop.css
@@ -127,6 +127,12 @@
     line-height: 1.3;
 }
 
+@media (max-width: 720px) {
+    .shop__description {
+        font-size: 0.65rem;
+    }
+}
+
 .shop__buy {
     min-width: 90px;
     padding: 0.4rem 0.7rem;
